@@ -1,0 +1,7 @@
+pyEQL is written and maintained by Ryan S. Kingsbury <RyanSKingsbury@alumni.unc.edu>
+
+Other contributors, listed alphabetically, are:
+
+* Hernan Grecco <hernan.grecco@gmail.com>
+
+(If you think that your name belongs here, please let the maintainer know)
