@@ -74,13 +74,16 @@ setup(
         'pyEQL': ['database/*','pint_custom_units.txt'],
         'tests': ['*']
     },
-
+    
     # Although 'package_data' is the preferred approach, in some case you may
     # need to place data files outside of your packages.
     # see http://docs.python.org/3.4/distutils/setupscript.html#installing-additional-files
     # In this case, 'data_file' will be installed into '<sys.prefix>/my_data'
     #data_files=[('my_data', ['data/data_file'])],
-
+    
+    # define the test suite
+    test_suite='pyEQL.tests.testsuite',
+    
     # To provide executable scripts, use entry points in preference to the
     # "scripts" keyword. Entry points provide cross-platform support and allow
     # pip to create the appropriate form of executable for the target platform.
