@@ -7,6 +7,7 @@ pyEQL Changelog
  - Add ability to calculate dielectric constant based on solution composition for salts
  - Add database entries for the viscosity 'B' parameter for 63 more inorganic ions
  - Fix bug causing activity corrections for non 1:1 salts to be calculated incorrectly (#15)
+ - Improve entry point for running automated tests (#16, thanks Hernan Grecco)
 
 0.3.1 (2016-02-24)
 ------------------
